--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/karthikambaragonda/weather-app#readme",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.2",
     "body-parser": "^1.20.2",
     "ejs": "^3.1.10",
     "express": "^4.19.2"
